# AGEInterview

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/node/: node.c  node.h
src/piecewise-recurrence/: recurrence.c  recurrence.h
tests/: node_test.c
tests/node/: node_test.c
tests/piecewise-recurrence/: piecewise_recurrence_test.c
